# Bitcoin_Sprint_Production_Final_2

./: .env.enterprise  .env.free  .env.nodedb  .env.rust  .env.smoketest-58867  .env.turbo  .git_tmp_ls_tree.txt  .gitattributes  .gitignore  BUILD_PROGRESS_TRACKER.md  CIRCUIT_BREAKER_ENTERPRISE_SUMMARY.md  Cargo.toml  DOCUMENTATION.md  GITHUB_PUSH_SUMMARY.md  LICENSE  Makefile  Makefile.win  P99_IMPLEMENTATION_STATUS.md  PRODUCTION_PORT_CONFIG.md  PROJECT_STRUCTURE.md  README.md  RUNTIME_OPTIMIZATION_COMPLETE.md  TIER_GUIDE.md  UNIFIED_MONITORING_README.md  WEB_CONNECTION_FIXED.md  WHITEPAPER.md  build-gcc-wrapper.bat  build-msvc-direct.bat  build-smoke-test-timeout.bat  coverage.json  dashboard.html  entropy-monitor.html  go.mod  go.sum  init-db.sql  package-lock.json  provider-selection.html  simple_main.go  simple_test.go  targets.json  (+5 more)
.github/PULL_REQUEST_TEMPLATE/: perf_change.md
.github/workflows/: axum-ci.yml  ci.yml  complete-cicd.yml  deploy.yml  performance.yml  security.yml  windows-cgo.yml
ISSUES/: 0001-cgo-msvc-path-space.md
archived_scripts_20250908_224235/scripts/: benchmark-providers.ps1  eth-sol-test-fixed.ps1  prove-acceleration.ps1  run-ten-min.ps1  smoke-test-launcher.ps1  start-core-and-sprint.ps1
archived_scripts_20250908_224315/archived_scripts_20250908_224235/: manage-secure-service.ps1  start-monitoring-fixed.bat  start-monitoring.bat
benchmark/latency/: Makefile  P99_LATENCY_REPORT.md  README.md  p99_benchmark.ps1  p99_load_test.lua  p99_server.go  run_and_update_report.ps1
cache/: solidity-files-cache.json
cmd/benchmark/: main.go
config/: bitcoin-exporter.py  bitcoin-sprint-api.yaml  bitcoin.conf  docker-compose.yml  enterprise-service.toml  license-demo-free.json  license-enterprise.json  requirements.txt  solana-exporter.py
contracts/: DEPLOYMENT_GUIDE.md
coverage/: coverage-final.json  lcov.info
data/: api_keys.json  api_keys_backup.json
db/: README.md
demo/: acceleration_layer_demo.go  sprint_acceleration_demo.go  sprint_value_demo.go
docker/: docker-compose.exporter.yml  docker-compose.monitoring.yml
docs/: BLOCK_DEDUPLICATION.md  DOCUMENTATION_INDEX.md  ENTROPY_MONITORING_README.md  ETHEREUM_ENDPOINTS.md  MAINTENANCE_SYSTEM.md  P99_LATENCY_PLAYBOOK_IMPL.md  PLATFORM_README.md  PRODUCTION_CONFIG.md  QUICKSTART.md  REPOSITORY_ORGANIZATION.md  SECURECHANNEL_API.md  STORAGE_VERIFICATION_SERVICE_README.md  WINDOWS_SETUP.md  securebuffer_ffi_setup.md  securebuffer_rust_report.md
examples/: backfill_example.go  enterprise_api_demo.go  enterprise_demo.go  enterprise_demo_simple.go  pqc_validator_metrics.rs  securebuffer_integration.go  sprint_value_demo.go
monitoring/: README.md  prometheus-fixed.yml  prometheus-simple.yml  sample-metrics.py
runtime/: turbo_validator.rs
scripts/: SCRIPT_ORGANIZATION.md  bitcoin-core-mock.py  build-go-clang-cl.cmd  build-go-gcc-wrapper.cmd  build-go-gcc.cmd  build-go-msvc-direct.cmd  build-go-msvc-wrapper.cmd  build-go-msvc.cmd  build-smoke-msvc.bat  build-smoke-msvc.cmd  cargo-build-msvc.cmd  cl-comprehensive-filter.cmd  cl-filter-wrapper.cmd  cl-to-gcc-wrapper.cmd  cl-wrapper.cmd  cl_wrapper.ps1  cl_wrapper_debug.bat  cl_wrapper_final.bat  cl_wrapper_final.ps1  cl_wrapper_fixed.bat  cl_wrapper_gcc.bat  cl_wrapper_robust.ps1  cl_wrapper_shim.bat  cl_wrapper_shim_fixed.bat  clang-cl-wrapper.cmd  clang-cl.cmd  eth-sol-test.ps1  generate-charts.ps1  msvc_wrapper.bat  msvc_wrapper_v2.bat  run-all-acceleration-tests.ps1  run-eth-sol-test.ps1  run-go-with-cl.cmd  run-go-with-clang-cl.cmd  run-go-with-clang-msvc.cmd  run-go-with-clang.cmd  run-multi-instance.ps1  run-ten-min-fixed.ps1  setup  smoke-test-fixed.ps1  (+1 more)
secure/: Cargo.toml  SECURE_SERVICE_README.md  SETUP.md  service.rs
secure/buffer-service/: go.mod  main.go
secure/buffer-service/secure/buffer-service/: main.go
secure/rust/: Cargo.toml  FINAL_VALIDATION_SUMMARY.md  IMPROVEMENTS.md  PROFESSIONAL_API_IMPLEMENTATION.md  TEST_REPORT.md  WEB_SERVER_README.md  build.rs  clippy_report.txt  clippy_report_postedit.txt  sample_enhanced_status.json  sample_health_status.json  sample_pool_status.json
secure/rust/examples/: main_patterns.rs  pool_demo.rs
secure/rust/include/: bloom_filter.h  securebuffer.h
secure/rust/src/: bloom_filter.rs  enterprise_web_server.rs  entropy.rs  lib.rs  secure_channel_improved.rs  securebuffer.rs  securebuffer_entropy.rs  storage_verifier.rs  web_server.rs
sprintclient/: client.go
src/: main.rs
src/rust/: Cargo.toml  lib.rs  main.rs  netkit.rs
technical/: mathematical_advantages.go
tools/: README.md  apply_migrations.go  blockchain-network-diagnostics.go  network-diagnostics.go  ps_bench.ps1  query_api_keys.go  simple-api.go  static-dashboard.go
web/: .env.local.new  .env.production.new  API_DOCUMENTATION.md  BRAND_COLORS_FIXED.md  DARK_THEME_SUMMARY.md  DASHBOARD_README.md  Dockerfile  ENTROPY_README.md  README.md  SECURITY_README.md  acceleration-dashboard.html  dashboard.html  enterprise-pricing.html  enterprise-storage-validation.html  live-dashboard.html  merkle-utils.ts  middleware.ts.disabled  next.config.js  package-lock.json  package.json  start-web-dev.bat  tailwind.config.cjs  test-simple-server.cjs  tsconfig.json  tsconfig.tsbuildinfo  turbo-dashboard.html  world-class-dashboard.html
(+1142 files in other folders)
