[package]
name = "securebuffer"
version = "0.1.0"
edition = "2021"

[lib]
name = "securebuffer"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
libc = "0.2"
sysinfo = "0.30"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
ipfs = ["reqwest"]
web-server = []
