[package]
name = "bitcoin-sprint-storage-verifier"
version = "2.1.0"
edition = "2021"
description = "Enhanced Entropy Storage Verifier with Connection Management"
authors = ["Bitcoin Sprint Team"]
license = "MIT"

[lib]
name = "bitcoin_sprint_storage_verifier"
path = "lib.rs"

[[bin]]
name = "bitcoin-sprint-demo"
path = "main.rs"

[dependencies]
actix-web = "4.4"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
hex = "0.4"
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
prometheus = "0.13"
lazy_static = "1.4"
socket2 = "0.5"
tokio-rustls = "0.25"
rustls = "0.22"
rustls-native-certs = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
